; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_lz4.c_lz4_decompress_zfs.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_lz4.c_lz4_decompress_zfs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lz4_decompress_zfs(i8* %0, i8* %1, i64 %2, i64 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  store i8* %0, i8** %7, align 8
  store i8* %1, i8** %8, align 8
  store i64 %2, i64* %9, align 8
  store i64 %3, i64* %10, align 8
  store i32 %4, i32* %11, align 4
  %14 = load i8*, i8** %7, align 8
  store i8* %14, i8** %12, align 8
  %15 = load i8*, i8** %12, align 8
  %16 = call i32 @BE_IN32(i8* %15)
  store i32 %16, i32* %13, align 4
  %17 = load i32, i32* %13, align 4
  %18 = sext i32 %17 to i64
  %19 = add i64 %18, 4
  %20 = load i64, i64* %9, align 8
  %21 = icmp ugt i64 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %5
  store i32 1, i32* %6, align 4
  br label %32

23:                                               ; preds = %5
  %24 = load i8*, i8** %12, align 8
  %25 = getelementptr inbounds i8, i8* %24, i64 4
  %26 = load i8*, i8** %8, align 8
  %27 = load i32, i32* %13, align 4
  %28 = load i64, i64* %10, align 8
  %29 = call i64 @LZ4_uncompress_unknownOutputSize(i8* %25, i8* %26, i32 %27, i64 %28)
  %30 = icmp slt i64 %29, 0
  %31 = zext i1 %30 to i32
  store i32 %31, i32* %6, align 4
  br label %32

32:                                               ; preds = %23, %22
  %33 = load i32, i32* %6, align 4
  ret i32 %33
}

declare dso_local i32 @BE_IN32(i8*) #1

declare dso_local i64 @LZ4_uncompress_unknownOutputSize(i8*, i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
